--- a/project/style.css
+++ b/project/style.css
@@ -85,6 +85,7 @@ a:hover{
     margin: 80px;
     border: 1px solid #ddd6d6;
     box-shadow: 0px 0px 30px;
+    border-radius: 10px;
 }
 .shadow{
     padding: 20px;
