--- a/project/style-price.css
+++ b/project/style-price.css
@@ -18,20 +18,20 @@ a{
     color: #222222;
 }
 #product-gallery .product-title:hover{
-    color: #555555;
-    font: 9pt tahoma;
+    color: #666666;
 }
 .container{
     width: 1170px;
     min-height: 300px;
-    border: 1px solid #999999;
+    /* border: 1px solid #999999; */
+    background-color: beige;
     margin: 30px auto;
     overflow: auto;
    
 }
 #product-gallery li{
     list-style: none;
-    width: 16.2%;
+    width: 15.8%;
     margin: 10px 5px;
     padding: 5px;
     float: right;
@@ -42,16 +42,20 @@ a{
 #product-gallery li:hover{
     box-shadow: 0 0 10px rgba(0,0,0,0.4);
     cursor: pointer;
-    background-color:#b9abab;
+    background-color:rgb(204, 204, 156);
+    border-radius: 20px;
 }
 #product-gallery{
     width: 100%;
     display: block;
     
+    
 }
 #product-gallery .product-item{
     padding: 5px;
     text-align: center;
+    position: relative;
+  
 }
 #product-gallery .product-img{
     margin: 10px auto;
@@ -61,21 +65,24 @@ a{
 }
 #product-gallery .product-price{
     color: red;
-    margin-bottom: 10px;
+    margin-bottom: 35px;
     margin-top: 10px;
+    padding: 5px;
 }
 #product-gallery .add-to-cart{
     border: 1px solid rgb(105, 139, 89);
     background-color: rgb(105, 139, 89);
     color: white;
     padding:5px 15px;
-    margin: 10px auto;
+    margin: 5px auto;
     display: inline-block;
     border-radius: 5px;
-    padding-bottom: 10px;
+    position: absolute;
+    left:15%;
+    bottom: 0px;
 }
 #product-gallery .add-to-cart:hover{
-    background-color: white;
+    background-color: beige;
     color: rgb(105, 139, 89);
   font: 9pt tahoma;
 }
@@ -87,4 +94,5 @@ a{
     position: absolute;
     top: 5px;
     left: 5px;
+    
 }
