2pictures with main-img and side-img

--- a/project/style-price.css
+++ b/project/style-price.css
@@ -5,7 +5,6 @@
 }
 body{
     direction: rtl;
-    text-align: center;
     font: 9pt tahoma;
 }
 a{
@@ -15,15 +14,29 @@ a{
 .clear{
     clear: both;
 }
-
+#menubar li{
+    display: inline-block;
+}
+#menubar li a{
+    padding: 5px 8px;
+    color: #111111;
+    display: block;
+}
+#menubar li a:hover{
+    background-color: rgb(163, 163, 139);
+    color: white;
+}
+#menubar ul > li > ul{
+    display: none;
+    position: absolute;
+}
 .container{
     width: 1170px;
-    min-height: 300px;
+    /* min-height: 300px; */
     /* border: 1px solid #999999; */
     background-color: beige;
     margin: 30px auto;
     overflow: auto;
-   
 }
 #product-gallery li{
     list-style: none;
@@ -31,29 +44,53 @@ a{
     margin: 10px 5px;
     padding: 5px;
     float: right;
-
 }
 #product-gallery li:hover{
     box-shadow: 0 0 10px rgba(0,0,0,0.4);
     cursor: pointer;
     background-color:rgb(204, 204, 156);
     border-radius: 20px;
+    transition:all 1s ease;
 }
 #product-gallery{
     width: 100%;
     display: block;
 }
+#product-gallery img{
+    margin: 10px;
+}
+#product-gallery .product-item .product-img{
+    display: block;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 155px;
+}
+#product-gallery .product-item .product-img:hover .main-img{
+    opacity: 0;
+    z-index: 0;
+}
+#product-gallery .product-item .product-img:hover .side-img{
+    opacity: 1;
+    z-index: 1;
+}
+#product-gallery .product-item .product-img .main-img,#product-gallery .product-item .product-img .side-img{
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    opacity: 1;
+    transition: all 1s ease-in-out;
+}
+#product-gallery .product-item .product-img .side-img{
+    z-index: 0;
+    opacity: 0;
+}
 #product-gallery .product-item{
     padding: 5px;
     text-align: center;
     position: relative;
-    min-height: 350px;
-    transition:all 2s ease;
-    position: relative;
     min-height: 300px;
-}
-#product-gallery .product-img{
-    margin: 10px auto;
 }
 #product-gallery .product-title{
     margin: 10px auto;
@@ -69,17 +106,21 @@ a{
     margin: 10px auto;
     padding: 5px;
 }
+#product-gallery .price-container{
+    /* border: 1px solid #cccccc; */
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
 .btn{
     border: 1px solid rgb(105, 139, 89);
     background-color: rgb(105, 139, 89);
     color: white;
     padding:5px 15px  10px;
-    margin: 10px auto;
     display: inline-block;
     border-radius: 5px;
-    position: absolute;
-    left:15%;
-    bottom: 0px;
 }
 .btn:hover{
     background-color: beige;
@@ -89,9 +130,8 @@ a{
     background-color: red;
     color: white;
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 15px;
     position: absolute;
     top: 5px;
     left: 5px;
-    
 }
