--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -5,6 +5,9 @@
 body{
     font: 9pt tahoma;
 }
+.clear{
+    clear: both;
+}
 .header{
     background: url('img/header-bg.jpg') no-repeat 0 0 ;
     background-size: cover;
@@ -69,4 +72,65 @@ body{
         display: block;
         width: 100;
     }
-
+    #main-menu .navbar-nav > li a{
+        color: #1c1c1c;
+        font-size:18px;
+    }
+    #main-menu .navbar-nav > li a:hover{
+        background: #34b0cd none repeat scroll 0 0;
+        color: white;
+        border-radius: 5px;
+    }
+    #main-menu.navbar {
+        background: #fff none repeat scroll 0 0;
+        border: medium none;
+        border-radius: 0;
+        box-shadow: 0 2px 2px 2px rgba(0,0,0,0.2);
+        margin: 0;
+        padding: 10px 0 8px;
+        color: #1c1c1c;
+    }
+    .heading-with-border{
+        background: #37B3CD none repeat scroll 0 0;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 16pt;
+        padding: 4px 10px;
+        padding-bottom: 10px;
+    }
+    .col-sm-3{
+        width: 25%;
+    }
+    .product-col{
+        background: white none repeat scroll 0 0;
+        box-shadow: 0 0 4px rgba(0,0,0,0.4);
+        margin-bottom: 20px;
+        padding: 15px 15px 10px;
+        text-align: center;
+        min-height: 320px;
+    }
+    .main-container img{
+        margin: 0 auto;
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+    .product-title a{
+        font-size: 10pt;
+        color: #1c1c1c;
+    }
+    .product-price{
+        color: red;
+        font-size: 11px;
+    }
+    .product-col .btn-cart{
+        background: rgba(0,0,0,0) linear-gradient(55deg,#1c1c1c 118px,transparent 117px) repeat scroll 0 0;
+        color: #fff;
+        padding: 6px 15px;
+        border: medium  none;
+        text-transform: uppercase;
+        font-size: 12px;
+        margin-top: 10px;
+       
+    }
