--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -4,9 +4,13 @@
 }
 body{
     font: 9pt tahoma;
+    line-height: 1.8em;
 }
 .clear{
     clear: both;
+}
+a:hover{
+    text-decoration: none;
 }
 .header{
     background: url('img/header-bg.jpg') no-repeat 0 0 ;
@@ -20,6 +24,19 @@ body{
 }
 .nav li a:hover{
     background-color: transparent;
+}
+#cart-container-float{
+    position: fixed;
+    left: 50%;
+    background-color: white;
+    border-radius: 0 0 18px 18px;
+    border: 1px solid #cdcdcd;
+    z-index: 1000;
+    padding: 12px;
+    font-size: 8pt;
+}
+.center{
+    text-align: center;
 }
 .search-box{
     margin-top: 100px;
@@ -86,7 +103,7 @@ body{
         border: medium none;
         border-radius: 0;
         box-shadow: 0 2px 2px 2px rgba(0,0,0,0.2);
-        margin: 0;
+        margin:0;
         padding: 10px 0 8px;
         color: #1c1c1c;
     }
@@ -94,9 +111,11 @@ body{
         background: #37B3CD none repeat scroll 0 0;
         border-radius: 2px;
         color: #fff;
-        font-size: 16pt;
-        padding: 4px 10px;
+        font-size: 15pt;
+        padding: 9px 10px;
         padding-bottom: 10px;
+        margin-top: 40px;
+        min-height: 45px;
     }
     .col-sm-3{
         width: 25%;
@@ -108,6 +127,7 @@ body{
         padding: 15px 15px 10px;
         text-align: center;
         min-height: 320px;
+        position: relative;
     }
     .main-container img{
         margin: 0 auto;
@@ -117,12 +137,17 @@ body{
         height: auto;
     }
     .product-title a{
-        font-size: 10pt;
+        font-size: 9pt;
         color: #1c1c1c;
+        margin-top: 5px;
     }
     .product-price{
         color: red;
         font-size: 11px;
+        position: absolute;
+        bottom: 60px;
+        left:10px;
+        right: 10px;
     }
     .product-col .btn-cart{
         background: rgba(0,0,0,0) linear-gradient(55deg,#1c1c1c 118px,transparent 117px) repeat scroll 0 0;
@@ -132,5 +157,8 @@ body{
         text-transform: uppercase;
         font-size: 12px;
         margin-top: 10px;
-       
+        position: absolute;
+        bottom: 20px;
+        left:30px;
+        right:50px;
     }
