--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -39,7 +39,7 @@ a:hover{
     text-align: center;
 }
 .search-box{
-    margin-top: 100px;
+    margin-top: 90px;
     border-bottom: 2px solid black;
     position: relative;
 }
@@ -50,10 +50,11 @@ a:hover{
     height: 30px;
     padding: 5px;
     width: 90%;
+    padding: 0 0 10px;
 }
 .search-box i{
     position: absolute;
-    top: 10px;
+    top: 0px;
     left: 10px;
     color: white;
 }
@@ -67,22 +68,14 @@ a:hover{
 }
 
 #cart .btn{
-        -moz-border-bottom-colors: none;
-        -moz-border-left-colors: none;
-        -moz-border-right-colors: none;
-        -moz-border-top-colors: none;
         background: rgba(0,0,0,0) none repeat scroll 0 0;
         border-color: #1c1c1c;
-        border-image: none;
         border-style: solid;
         border-width: 0 0 2px;
-        box-shadow: none;
         color: #fff;
         font-size: 16px;
-        margin: 100px 0 0;
+        margin: 80px 0 0;
         padding: 0 0 10px;
-        text-align: left;
-        text-transform: uppercase;
         border-radius: 0;
         font: 18px CustomFont;
     }
