--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -15,7 +15,7 @@ a:hover{
 .header{
     background: url('img/header-bg.jpg') no-repeat 0 0 ;
     background-size: cover;
-    min-height: 250px;
+    min-height: 230px;
 }
 .header-link li a{
     padding: 20px 15px 0 0;
@@ -24,22 +24,24 @@ a:hover{
 }
 .nav li a:hover{
     background-color: transparent;
+    color: #fff;
 }
 #cart-container-float{
     position: fixed;
-    left: 50%;
+    left: 42%;
     background-color: white;
-    border-radius: 0 0 18px 18px;
+    border-radius: 0 0 20px 20px;
     border: 1px solid #cdcdcd;
     z-index: 1000;
-    padding: 12px;
+    padding: 6px;
     font-size: 8pt;
+    background-color:#edf1f1;
 }
 .center{
     text-align: center;
 }
 .search-box{
-    margin-top: 90px;
+    margin-top: 70px;
     border-bottom: 2px solid black;
     position: relative;
 }
@@ -49,17 +51,17 @@ a:hover{
     color:white;
     height: 30px;
     padding: 5px;
-    width: 90%;
+    width: 40%;
     padding: 0 0 10px;
 }
 .search-box i{
     position: absolute;
-    top: 0px;
+    top: -2px;
     left: 10px;
     color: white;
 }
 #logo .img-responsive{
-    margin-top: 80px;
+    margin-top: 50px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -73,15 +75,14 @@ a:hover{
         border-style: solid;
         border-width: 0 0 2px;
         color: #fff;
-        font-size: 16px;
-        margin: 80px 0 0;
+        margin: 52px 0 0;
         padding: 0 0 10px;
         border-radius: 0;
-        font: 18px CustomFont;
+        font: 22px CustomFont;
     }
     .btn-block{
         display: block;
-        width: 100;
+        width: 100%;
     }
     #main-menu .navbar-nav > li a{
         color: #1c1c1c;
@@ -105,7 +106,7 @@ a:hover{
         background: #37B3CD none repeat scroll 0 0;
         border-radius: 2px;
         color: #fff;
-        font-size: 15pt;
+        font-size: 14pt;
         padding: 9px 10px;
         padding-bottom: 10px;
         margin-top: 40px;
@@ -156,3 +157,54 @@ a:hover{
         left:30px;
         right:50px;
     }
+    .product-col .btn-cart:hover{
+        background: rgba(0,0,0,0) linear-gradient(55deg,#37B3CD 118px,transparent 117px) repeat scroll 0 0;
+    }
+    .brief-post{
+        text-align: justify;
+        min-height: 175px;
+    }
+    .right{
+        float: right !important;
+        margin-right: 90px;
+    }
+    .left{
+        float: left !important;
+        margin-left: 70px;
+    }
+    .brief-post h2 a{
+        color: black;
+        font-size: 20px;
+    }
+    .list-blog-image{
+        float: right;
+        padding: 5px;
+    }
+    .footer-links{
+        background: url('img/header-bg.jpg') no-repeat 0 0 ;
+        padding: 30px 0px 40px;
+    }
+    .footer-links h5{
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+   
+    .footer-links, .footer-links li, .footer-links li a, .footer-links li a:hover, .footer-links h4, .footer-links h5{
+        color: #fff;
+    }
+    .footer-links ul{
+        list-style: outside none none;
+        margin: 0;
+        padding: 0;
+    }
+    footer a:hover{
+    color: #31A1B9 !important;
+    background-color: #ddf2f7;
+    padding: 5px;
+    }
+    .copyright{
+        background: #1c1c1c none repeat scroll 0 0;
+        color: white;
+        padding: 18px 0px 8px;
+    }
+
