--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -36,6 +36,7 @@ a:hover{
     padding: 6px;
     font-size: 8pt;
     background-color:#edf1f1;
+    font-family: IRANSans;
 }
 .center{
     text-align: center;
@@ -78,7 +79,8 @@ a:hover{
         margin: 52px 0 0;
         padding: 0 0 10px;
         border-radius: 0;
-        font: 22px CustomFont;
+        font-size: 18px;
+        font-family: IRANSans;
     }
     .btn-block{
         display: block;
@@ -101,6 +103,10 @@ a:hover{
         margin:0;
         padding: 10px 0 8px;
         color: #1c1c1c;
+        font-family: IRANSans;
+    }
+    .navbar-collapse{
+        padding-right: 0px !important;
     }
     .heading-with-border{
         background: #37B3CD none repeat scroll 0 0;
@@ -111,9 +117,7 @@ a:hover{
         padding-bottom: 10px;
         margin-top: 40px;
         min-height: 45px;
-    }
-    .col-sm-3{
-        width: 25%;
+        font-family: IRANSans;
     }
     .product-col{
         background: white none repeat scroll 0 0;
@@ -132,9 +136,13 @@ a:hover{
         height: auto;
     }
     .product-title a{
-        font-size: 9pt;
+        font-size: 8pt;
         color: #1c1c1c;
         margin-top: 5px;
+        font-family: IRANSans;
+    }
+    .product-title a:hover{
+        color: #5c5b5b;
     }
     .product-price{
         color: red;
@@ -143,6 +151,7 @@ a:hover{
         bottom: 60px;
         left:10px;
         right: 10px;
+        font-family: IRANSans;
     }
     .product-col .btn-cart{
         background: rgba(0,0,0,0) linear-gradient(55deg,#1c1c1c 118px,transparent 117px) repeat scroll 0 0;
@@ -163,6 +172,10 @@ a:hover{
     .brief-post{
         text-align: justify;
         min-height: 175px;
+        font-family: IRANSans;
+        padding: 7px;
+        margin-bottom: 30px;
+        font-size: 10px;
     }
     .right{
         float: right !important;
@@ -174,7 +187,15 @@ a:hover{
     }
     .brief-post h2 a{
         color: black;
-        font-size: 20px;
+        font-size: 18px;
+        font-family: IRANSans;
+        line-height: 1em;
+    }
+    .brief-post h2{
+        min-height: 60px;
+    }
+    .brief-post h2 a:hover{
+        color: #5c5b5b;
     }
     .list-blog-image{
         float: right;
