--- a/zhiarsoft/style.css
+++ b/zhiarsoft/style.css
@@ -116,18 +116,19 @@ a:hover{
         font-size: 14pt;
         padding: 9px 10px;
         padding-bottom: 10px;
-        margin-top: 40px;
+        margin-top: 30px;
         min-height: 45px;
         font-family: IRANSans;
     }
     .product-col{
         background: white none repeat scroll 0 0;
         box-shadow: 0 0 4px rgba(0,0,0,0.4);
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         padding: 15px 15px 10px;
         text-align: center;
         min-height: 320px;
         position: relative;
+        margin-top: 10px;
     }
     .main-container img{
         margin: 0 auto;
@@ -238,12 +239,38 @@ a:hover{
     footer a{
         font-family: IRANSans;
         margin-bottom: 15px
-s    }
+   }
     .copyright{
         background: #1c1c1c none repeat scroll 0 0;
         color: white;
         padding: 18px 0px 8px;
     }
+    #prev-button,#next-button{
+        width: 30px;
+        height: 30px;
+        padding-top: 2px;
+        background-color: white;
+        color: #37B3CD;
+        position: absolute;
+        text-align: center;
+        border-radius: 3px;
+        box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+    .product-wrapper{
+        position: relative;
+    }
+    #prev-button{
+        top: 7px;
+        left: 47px;
+        padding-left: 2px;
+    }
+    #next-button{
+        top: 7px;
+        left:12px;
+        padding-right: 2px;
+    }
+
+
 
 
 
