--- a/zhiarsoft/style-maghale.css
+++ b/zhiarsoft/style-maghale.css
@@ -126,31 +126,62 @@ a:hover{
         font-size: 14pt;
         padding: 9px 10px;
         padding-bottom: 10px;
-        margin-top: 30px;
+        margin-top: 40px;
         min-height: 45px;
         font-family: IRANSans;
     }
     h1,h2,h3{
-        font: 22px IRANSans;
+        font: 20px IRANSans;
+    }
+    .fa {
+        margin-left: 5px;
+    }
+    a{
+        color: #35b1ce;
+    }
+    p{
+        font-family: IRANSans;
+        margin:0 0 10px;
+        font-size: 12px;
+    }
+    span{
+        font-size: 11px;
+        font-family: IRANSans;
     }
     .post-mini-info {
         border-bottom: 1px solid #EDEDED;
         border-top: 1px solid #EDEDED;
-        margin-bottom: 10px;
+        margin-bottom: 12px;
+        margin-top: 5px;
         overflow: hidden;
-        padding: 9px 0;
+        padding: 4px 0;
+    }
+    .block_blog article .post-pic {
+        display: block;
+        overflow: hidden;
+        float: right;
+        padding: 5px;
+        text-align: center;
+        margin-bottom: 50px;
     }
     .general_read_more {
-        background-image: url("/static/img/arrow_read_more.gif");
-        background-position: right 6px;
-        background-repeat: no-repeat;
         color: #F63;
         font: 8pt tahoma;
             line-height: normal;
         line-height: normal;
         padding-right: 15px;
         float: left;
+        position: relative;
     }
+    .general_read_more::after{
+        content:"\f061";
+        font-family: fontawesome;
+        font-size: 10px;
+        position: absolute;
+        top: 3px;
+        right: 0px;
+    }
+
     .pagination {
         display: inline-block;
         padding-left: 0;
@@ -166,6 +197,7 @@ a:hover{
     }
     img {
         vertical-align: middle;
+        margin-top: 20px;
     }
     .pull-left {
         float: left !important;
@@ -183,6 +215,7 @@ a:hover{
         margin-top: 0;
         padding: 5px 20px;
     }
+
     .footer-links{
         background: url('img/header-bg.jpg') no-repeat 0 0 ;
         padding: 30px 0px 40px;
