--- a/store/style4.css
+++ b/store/style4.css
@@ -24,9 +24,6 @@ a{
 a:hover{
     text-decoration: none;
 }
-.container{
-    margin-right: 70px;
-}
 .header{
     min-height: 200px;
     background-color: #232f3e;
@@ -38,13 +35,17 @@ a:hover{
     margin-right:30px;
 }
 .header-link{
-    margin-right: 15px;
+    margin-right: 13px;
+}
+li{
+    list-style: none;
 }
 ul.megamenu li{
-    float: right;
     padding: 10px;
     margin-left: 20px;
     position: relative;
+    display: inline-block;
+    list-style: none;
 }
 ul.megamenu li a:hover{
     color: #ff3c20;
@@ -68,9 +69,9 @@ ul.megamenu li a:hover{
 .all-category{
     border: 1px solid #ff3c20;
     background-color: #ff3c20;
-    padding: 10px;
+    padding: 6px;
     text-align: center;
-    border-radius: 4px 4px 0px 0px;
+    border-radius: 5px 5px 0px 0px;
     position: relative;
     font-size: 17px;
 }
@@ -79,7 +80,7 @@ ul.megamenu li a:hover{
     font-family: fontawesome;
     font-size: 25px;
     position: absolute;
-    top: 10px;
+    top: 6px;
     right: 20px;
     color: white;
 }
@@ -88,10 +89,94 @@ ul.megamenu li a:hover{
     font-family: fontawesome;
     font-size: 12px;
     position: absolute;
-    top: 10px;
+    top: 6px;
     left: 20px;
     color: white;
 }
+
+
+
+
+
+.main-menu .header-link .container ul li {
+    float: right;
+    width: auto;
+    margin-left: 5px;
+}
+.main-menu .header-link .container ul li a {
+    display: block;
+    padding: 5px 5px;
+}
+.main-menu .header-link .container ul li:hover .mega-menu {
+    display: block;
+}
+.main-menu .header-link .container .menu-title {
+    font-size: 12pt;
+    color: black;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #f3eded;
+}
+.main-menu .header-link .container .menu-list > ul >li >a {
+    color: #666;
+    font-size: 11px;
+}
+.main-menu .header-link .container .menu-page > ul >li >a {
+    color: #666;
+    font-size: 11px;
+}
+.main-menu .header-link .container .menu-page{
+    width: 400px;
+}
+.main-menu .header-link .container .menu-list .menu-page > ul >li >a:hover{
+    color: #ff3c20;
+}
+.main-menu .header-link .container .menu-list > ul >li >a:hover{
+    color: #ff3c20;
+}
+.main-menu .header-link .container ul {
+    padding: 0;
+    margin: 0;
+}
+.main-menu .header-link .container ul li {
+    float: right;
+    width: auto;
+}
+.main-menu .header-link .mega-menu ul li {
+    display: block;
+    width: 100% !important;
+}
+.main-menu .header-link .mega-menu ul li a {
+    padding: 0px !important;
+    display: block;
+}
+.top-menu #top-navbar li a:hover {
+    color: white;
+    text-decoration: none;
+    background-color: #ff3c20;
+}
+.main-menu .header-link .mega-menu {
+    display: none;
+    min-height: 150px;
+    min-width: 700px;
+    position: absolute;
+    background-color: white;
+    border: 1px solid white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    z-index: 102;
+    right: 0;
+    left: 0;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -106,6 +191,7 @@ ul.megamenu li a:hover{
 #sosearchpro {
     padding: 10px 0;
     width: 60%;
+    margin-right:5px;
 }
 #sosearchpro .search {
     position: relative;
@@ -135,16 +221,13 @@ ul.megamenu li a:hover{
         background-color: white;
 }
 #sosearchpro .search .select_category select {
-
     height: 40px;
     line-height: 40px;
     color: #666;
     font-size: 12px;
     padding: 0 4px;
-
 }
 #sosearchpro .select_category select {
-
     height: 40px;
     width: 100%;
     line-height: 100%;
@@ -156,7 +239,6 @@ ul.megamenu li a:hover{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-
 }
 #sosearchpro .select_category::after{
     content: "\f0d7";
@@ -168,20 +250,15 @@ ul.megamenu li a:hover{
     color:#666;
 }
 option {
-
     padding: 2px 5px;
     border-width: 1px;
-
 }
 #sosearchpro .search .select_category select {
-
     line-height: 40px;
     color: #666;
     font-size: 12px;
-
 }
 .chosen-container {
-
     position: relative;
     display: inline-block;
     vertical-align: middle;
@@ -190,25 +267,19 @@ option {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-
 }
 #sosearchpro .chosen-container-single .chosen-single {
-
     min-width: 180px;
-
 }
 #sosearchpro .chosen-container-single .chosen-single {
-
     border: 0;
     border-radius: 0;
     box-shadow: none;
     background: none;
     height: 40px;
     line-height: 40px;
-
 }
 .chosen-container-single .chosen-single {
-
     position: relative;
     display: block;
     overflow: hidden;
@@ -226,79 +297,57 @@ option {
     text-decoration: none;
     white-space: nowrap;
     line-height: 24px;
-
 }
 .chosen-container a {
-
     cursor: pointer;
-
 }
 .chosen-container * {
-
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
 }
 a, a:visited, a:active, a:link, a:focus {
-
     cursor: pointer;
     text-decoration: none;
     outline: none;
-
 }
 .chosen-container-single .chosen-single span {
-
     display: block;
     overflow: hidden;
     margin-right: 20px;
     text-overflow: ellipsis;
     white-space: nowrap;
-
 }
 .chosen-container-single .chosen-single div {
-
     position: absolute;
     top: 0;
     right: 0;
     display: block;
     width: 18px;
     height: 100%;
-
 }
 #sosearchpro .chosen-container-single .chosen-single div b {
-
     background-position: 2px 10px;
-
 }
 .chosen-container-single .chosen-single div b {
-
     display: block;
     width: 100%;
     height: 100%;
     background: url("chosen-sprite.png") no-repeat 0px 2px;
         background-position-x: 0px;
         background-position-y: 2px;
-
 }
 b, strong {
-
     font-weight: 700;
-
 }
 #sosearchpro .chosen-container .chosen-drop {
-
     border: 1px solid #e5e5e5;
-
 }
 .chosen-container-single .chosen-drop {
-
     margin-top: -1px;
     border-radius: 0 0 4px 4px;
     background-clip: padding-box;
-
 }
 .chosen-container .chosen-drop {
-
     position: absolute;
     top: 100%;
     z-index: 1010;
@@ -312,25 +361,19 @@ b, strong {
     clip: rect(0, 0, 0, 0);
     -webkit-clip-path: inset(100% 100%);
     clip-path: inset(100% 100%);
-
 }
 .chosen-container-single .chosen-search {
-
     position: relative;
     z-index: 1010;
     margin: 0;
     padding: 3px 4px;
     white-space: nowrap;
-
 }
 header #sosearchpro .search .chosen-container input {
-
     margin: 0;
     padding-left: 10px;
-
 }
 #sosearchpro .search input {
-
     border: none;
     border-radius: 0px;
     background-color: #fff;
@@ -341,17 +384,13 @@ header #sosearchpro .search .chosen-container input {
     width: 100%;
     background-color: #fff;
     color: #999;
-
 }
 header #sosearchpro input.chosen-search-input {
-
     height: 23px !important;
     line-height: 23px;
     border: 1px solid #efefef !important;
-
 }
 .chosen-container-single .chosen-search input[type="text"] {
-
     margin: 1px 0;
     padding: 4px 20px 4px 5px;
         padding-left: 5px;
@@ -365,10 +404,8 @@ header #sosearchpro input.chosen-search-input {
     font-family: sans-serif;
     line-height: normal;
     border-radius: 0;
-
 }
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input, .form-control, select {
-
     border-radius: 3px;
     background-color: #eee;
     border: none;
@@ -378,17 +415,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     font-size: 1.2rem;
     box-shadow: none !important;
     transition: all 0.3s ease;
-
 }
 input[type="text"] {
-
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-
 }
 .chosen-container .chosen-results {
-
     color: #444;
     position: relative;
     overflow-x: hidden;
@@ -397,28 +430,20 @@ input[type="text"] {
     padding: 0 0 0 4px;
     max-height: 240px;
     -webkit-overflow-scrolling: touch;
-
 }
 ul, ul.menu, ol.menu, ul.blank, .our-member .respl-item .info-member ul, .why-list {
-
     list-style: none;
     margin: 0;
     padding: 0;
-
 }
 #sosearchpro .chosen-container .chosen-results li {
-
     white-space: nowrap;
-
 }
 .chosen-container .chosen-results li.active-result {
-
     display: list-item;
     cursor: pointer;
-
 }
 .chosen-container .chosen-results li {
-
     display: none;
     margin: 0;
     padding: 5px 6px;
@@ -426,10 +451,8 @@ ul, ul.menu, ol.menu, ul.blank, .our-member .respl-item .info-member ul, .why-li
     line-height: 15px;
     word-wrap: break-word;
     -webkit-touch-callout: none;
-
 }
 #sosearchpro .search input {
-
     border: none;
     border-radius: 0px;
         border-top-right-radius: 0px;
@@ -442,34 +465,24 @@ ul, ul.menu, ol.menu, ul.blank, .our-member .respl-item .info-member ul, .why-li
     width: 100%;
     background-color: #fff;
     color: #999;
-
 }
 header #sosearchpro .dropdown-menu {
-
     border-radius: 0;
-
 }
 header #sosearchpro .dropdown-menu {
-
     opacity: 1;
     visibility: visible;
     margin-top: 0;
-
 }
 #sosearchpro .dropdown-menu {
-
     min-width: 300px;
-
 }
 #sosearchpro .dropdown-menu {
-
     padding: 0px;
     max-height: 300px;
     overflow-y: scroll;
-
 }
 header .dropdown-menu {
-
     display: block;
     opacity: 0;
     filter: alpha(opacity=0);
@@ -484,10 +497,8 @@ header .dropdown-menu {
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     border-radius: 0px;
-
 }
 .dropdown-menu {
-
     background: #fff;
         background-clip: border-box;
     padding: 5px 0;
@@ -496,10 +507,8 @@ header .dropdown-menu {
     border: none;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     font-size: 12px;
-
 }
 .dropdown-menu {
-
     position: absolute;
     top: 100%;
     left: 0;
@@ -521,29 +530,21 @@ header .dropdown-menu {
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
-
 }
 #sosearchpro .search .input-group-btn {
-
     width: 0;
-
 }
 .input-group-btn {
-
     position: relative;
     font-size: 0;
     white-space: nowrap;
-
 }
 .input-group-addon, .input-group-btn {
-
     width: 1%;
     white-space: nowrap;
     vertical-align: middle;
-
 }
 #sosearchpro .search button {
-
     position: absolute;
     top: 0px;
     right: 0px;
@@ -559,38 +560,28 @@ header .dropdown-menu {
     text-transform: upper-case;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-
 }
 #sosearchpro .search button {
-
     background-color: #ff3c20;
-
 }
 #sosearchpro .search button:hover {
     background-color: #ec1e00;
 }
 #sosearchpro .button-search {
-
     border-color: #e5e5e5;
     height: 42px;
-
 }
 .btn-default {
-
     background: #ff3c20;
         background-color: rgb(255, 60, 32);
     border-radius: 0;
-
 }
 .btn-lg, .btn-group-lg > .btn {
-
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
-
 }
 .button, .btn {
-
     padding: 9px 20px;
     background: #495057;
     color: #fff;
@@ -602,26 +593,26 @@ header .dropdown-menu {
         border-left-color: currentcolor;
     background: #ff3c20;
     border-color: #ff3c20;
-
 }
 #sosearchpro .search button i {
-
     font-size: 12px;
     color: #fff;
-
 }
 .button .fa, .btn .fa {
-
     margin: 0 5px;
-
 }
 :focus {
-
     outline: none;
-
 }
 #sosearchpro .search .select_category select:hover {
-
     cursor: pointer;
-
 }
+
+
+
+
+
+
+
+
+
