--- a/store/style4.css
+++ b/store/style4.css
@@ -27,6 +27,7 @@ a:hover{
 .header{
     min-height: 200px;
     background-color: #232f3e;
+    width: 100%;
 }
 .header-top{
     padding-top:50px; 
@@ -35,7 +36,8 @@ a:hover{
     margin-right:30px;
 }
 .header-link{
-    margin-right: 13px;
+    margin-right: 100px;
+    font-size: 16px;
 }
 li{
     list-style: none;
@@ -64,7 +66,7 @@ ul.megamenu li a:hover{
     padding-top: 10px;
 }
 .middle-left ul li{
-    padding-right: 90px;
+    padding-right: 115px;
 }
 .all-category{
     border: 1px solid #ff3c20;
