--- a/store/style6.css
+++ b/store/style6.css
@@ -784,9 +784,6 @@ box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
 
 
 
-#slider{
-    margin-top: 50px;
-}
 .b-img1{
     margin-top: 50px;
 }
@@ -796,150 +793,148 @@ img{
 .banner4{
     margin-top:20px;
 }
+
+
+
+
+#slider{
+    margin-top:50px;
+    margin-right:0;
+}
 .banner img{
-    max-width:110%;
+    max-width:113%;
     vertical-align: middle;
     display:inline;
-    margin-top: 50px;
-}
-
-
-
-
-
-.left-block img{
-    max-width:170%;
-    max-height:150px;
-    vertical-align: middle;
-    display:inline;
-    padding-top: 5px;
-}
-
-.a1 b{
-    color:#ff3c20; 
-      
-}
-.product-info .fa{
-    padding-right: 10px;
 }
 .deals-layout1 {
     position: relative;
 }
 .module h3.modtitle {
-    border-bottom: 2px solid #eee;
-    display: inline-block;
-    width: 100%;
-    position: relative;
-    margin-top: 0;
-    margin-bottom: 20px;
-    font-size: 16px;
-    color: #000;
-    font-weight: 700;
-    text-transform: uppercase;
+border-bottom: 2px solid #eee;
+display: inline-block;
+width: 100%;
+position: relative;
+margin-top: 0;
+margin-bottom: 20px;
+font-size: 16px;
+color: #000;
+font-weight: 700;
+text-transform: uppercase;
 }
 .module h3  span {
-        font-size: 16px;
-        color: #fff;
-        font-weight: 700;
-        float: right;
-        text-transform: uppercase;
-        margin-bottom: 0px;
-        background-color: #232f3e;
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
-        padding: 11px 20px;
-        position: relative;
-        bottom: -2px;
+font-size: 16px;
+color: #fff;
+font-weight: 700;
+float: right;
+text-transform: uppercase;
+margin-bottom: 0px;
+background-color: #232f3e;
+border-top-left-radius: 3px;
+border-top-right-radius: 3px;
+padding: 11px 20px;
+position: relative;
+bottom: -2px;
 }
 .slick-append {
-            position: absolute;
-            left: 20px;
+    position: absolute;
+    left: 20px;
 }
-.slick-append .btn-next-sugested,.slick-append .btn-prev-sugested {
+.slick-append button {
    
-            display: inline-block;
-            border-radius: 3px;
-            transform: translateY(-5px);
-            color: #333333;
-            border: none;
-            outline: none;
-            background-color:#fff;
-            border: 2px solid #ccc;
-            border-radius: 50%;
-            width: 28px;
-            height: 28px;
-            line-height: 22px;
-            text-align: center;
-            float: right;
-            overflow: hidden;
-            cursor: pointer;
-            opacity: 1;
-            z-index: 99;
+display: inline-block;
+border-radius: 3px;
+transform: translateY(-5px);
+color: #333333;
+border: none;
+outline: none;
+background-color:#fff;
+border: 2px solid #ccc;
+border-radius: 50%;
+width: 28px;
+height: 28px;
+line-height: 22px;
+text-align: center;
+overflow: hidden;
+cursor: pointer;
+opacity: 1;
+z-index: 99;
+}
+.slick-append button:hover {
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
+}
+
+.grade-wrapper img{
+    max-width:120%;
 }
 .product-info .product-title {   
-                padding-bottom:20px;
+ padding-bottom:20px;
 }
+
 .product-info .product-title a{
-                color: #222;
-                font-size: 18px;
-                font-family: IRANSans;
+    color: #222;
+    font-size: 18px;
+    
 }
-span.fa-stack .fa-stack-2x {
-                font-size: 11px;
-                color:#666;
-                
+
+.product-info .product-title a:hover{
+    color:#ff3c20;  
 }
-span.fa-stack {
-                width: 14px;
-                height: 11px;
-                line-height: 10px;
-                font-size: 12px;
-                margin-bottom:15px;
+
+.product-info .product-price{
+    color:#ff3c20; 
+    padding-bottom:20px; 
 }
-                        
-h3.modtitle{
-                font-size: 16px;
-                color: #222;
-                font-weight: 700;
-                float: right;
-                text-transform: uppercase;
-                background-color: transparent;
-                padding: 0;
-                padding-bottom: 8px;
-                bottom: 0;
-                border-bottom: 2px solid #eee;
-                display: inline-block;
-                width: 100%;
-                position: relative;
-                margin-bottom: 7px;
-                margin-top:15px;
+
+.add-to-cart .fa{
+    color:#ff3c20; 
 }
-                
-                                                           
-.main-container img{
+
+
+
+.a1 b{
+    color:#ff3c20; 
+      
+}
+h4.modtitle{
+font-size: 16px;
+color: #222;
+font-weight: 700;
+text-transform: uppercase;
+background-color: transparent;
+padding: 0;
+padding-bottom: 8px;
+bottom: 0;
+border-bottom: 2px solid #eee;
+display: inline-block;
+width: 100%;
+position: relative;
+margin-bottom: 7px;
+margin-top:15px;
+}
+
+.item-info .item-title a{
+       color: #222;
+       font-size: 16px;
+       
+   }
+   
+.item-info .item-title a:hover{
+       color:#ff3c20;  
+   }
+   
+.item-info .item-price{
+       color:#ff3c20; 
+       
+   }
+.module img{
     margin: 0 auto;
     display: block;
     max-width: 100%;
     max-height: 100%;
     height: auto;
 }
-.product-info .product-title a:hover{
-    color:#ff3c20;  
-}
-
-.product-price{
-    color: red;
-    font-size: 11px;
-    font-family: IRANSans;
-}
 .product-price del{
     color: #999;
-}
-.product-info .fa:hover{
-    color: white;
-}
-.grade-wrapper img{
-    max-width:100%;
 }
 .label-product-sale {
     text-align: center;
@@ -947,7 +942,7 @@ h3.modtitle{
     border-radius: 50%;
     color: #fff;
     display: block;
-    font-size: 10px;
+    font-size: 11px;
     font-size: 1.2rem;
     font-weight: 700;
     height: 35px;
